Improved home page

--- a/index.html
+++ b/index.html
@@ -432,24 +432,28 @@
 
 
 <h1 id="welcome">Welcome</h1>
-<p>Hello Yazio!</p>
-<p>I am Bruno Prado and this is my solution to the case study.</p>
-<p>Thank you for your time evaluating this document.</p>
+<div style="display: flex; justify-content: center; align-items: center;">
+    <img src="../images/profile.jpg" alt="Circular Image" style="width: 250px; height: 250px; border-radius: 50%; border: 2px solid #ccc; object-fit: cover;">
+</div>
+
+<p>Hello Yazio Team,</p>
+<p>My name is Bruno Prado, and this document contains my solution to the case study.</p>
+<p>I appreciate the time you’re taking to review my work.</p>
 <div class="admonition info">
-<p class="admonition-title">Quick Tips</p>
+<p class="admonition-title">Quick Navigation Tips</p>
 <ul>
-<li>Use the table of contents on the right-side of the document to navigate easier.</li>
-<li>Some visualizations are interactive, you can click on it!</li>
+<li>Use the table of contents on the right to navigate easily through the document.</li>
+<li>Some visualizations are interactive with, feel free to explore them by hovering and clicking!</li>
 </ul>
 </div>
 <h2 id="business-documents">Business Documents</h2>
 <ul>
-<li><a href="projects/project1/">Task One - Paid Marketing Campaign Data</a></li>
-<li><a href="projects/project2/">Task Two - Recipe Data</a></li>
+<li><a href="projects/project1/">Task One: Paid Marketing Campaign Data</a></li>
+<li><a href="projects/project2/">Task Two: Recipe Data</a></li>
 </ul>
 <h2 id="technical-documents">Technical Documents</h2>
 <ul>
-<li><a href="https://github.com/b-prado/casestudy_marketing_statistics">Github Repository</a></li>
+<li><a href="https://github.com/b-prado/casestudy_marketing_statistics">GitHub Repository</a></li>
 </ul>
 
 
