Tried to fix the image problem

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 
 <h1 id="welcome">Welcome</h1>
 <div style="display: flex; justify-content: center; align-items: center;">
-    <img src="../images/profile.jpg" alt="Circular Image" style="width: 250px; height: 250px; border-radius: 50%; border: 2px solid #ccc; object-fit: cover;">
+    <img src="./images/profile.jpg" alt="Circular Image" style="width: 250px; height: 250px; border-radius: 50%; border: 2px solid #ccc; object-fit: cover;">
 </div>
 
 <p>Hello Yazio Team,</p>
